# VQEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: FUNDING.yml
Data/: EngineSettings.ini  EnvironmentMaps.ini  HDRDisplayProfiles.ini  RendererSettings.ini  Scenes.ini
Data/Fonts/: FontAwesomeLicense.txt  LiberationSans-License.txt
Data/Levels/: Default.xml  DefaultScene.xml  GeometryUnitTest.xml  LightingTest.xml  Sponza.xml  StressTest.xml  Terrain.xml
Data/Materials/: DefaultMaterials.xml  MetallicMaterials.xml  PBRMaterials.xml  RoughMaterials.xml
Data/Models/sponza/: sponza.mtl
Data/Resources/: VQE.rc  resource.h
Data/Textures/HDRI/: README.md  gym_entrance_8k.hdr  stadium_01_8k.hdr  sunny_vondelpark_8k.hdr  venice_sunset_8k.hdr  winter_evening_8k.hdr
Libs/AMDFidelityFX/CACAO/: build_shaders_dxil.bat  ffx_cacao.cpp  ffx_cacao.h  ffx_cacao_defines.h  ffx_cacao_impl.cpp  ffx_cacao_impl.h
Libs/DirectXCompiler/: README.md
Libs/FidelityFX/CACAO/: build_shaders_dxil.bat  ffx_cacao.cpp
Libs/WinPixEventRuntime/: .signature.p7s
Scripts/: DownloadAssets.bat  TestVQE.bat
Shaders/: AMDFidelityFX.hlsl  ApplyReflections.hlsl  BRDF.hlsl  CubemapConvolution.hlsl  DepthPass.hlsl  DepthPrePass.hlsl  DepthResolve.hlsl  DownsampleDepth.hlsl  ForwardLighting.hlsl  GaussianBlur.hlsl  GaussianBlur_AMD.hlsl  HDR.hlsl  LTC.hlsl  LTCMatrix.h  Lighting.hlsl  LightingConstantBufferData.h  Magnifier.hlsl  Object.hlsl  ObjectID.hlsl  Outline.hlsl  ShadingMath.hlsl  ShadowDepthPass.hlsl  Skydome.hlsl  Terrain.hlsl  TerrainConstantBufferData.h  Tessellation.hlsl  Tonemapper.hlsl  UI.hlsl  UIHDRComposite.hlsl  Unlit.hlsl  VQPlatform.h  VertexDebug.hlsl  Visualization.hlsl  ffx_a.h  hello-cube.hlsl  hello-triangle.hlsl
Shaders/AMD/CACAO/: ffx_cacao.hlsl
Shaders/AMD/CAS/: ffx_cas.h
Shaders/AMD/DNSR/: ffx_denoiser_reflections_common.h  ffx_denoiser_reflections_config.h  ffx_denoiser_reflections_resolve_temporal.h
Shaders/AMD/SSSR/: ffx_sssr.h
Shaders/AMDFidelityFX/DNSR/: ffx_denoiser_reflections_common.h  ffx_denoiser_reflections_prefilter.h  ffx_denoiser_reflections_reproject.h
Shaders/AMDFidelityFX/FSR1.0/: ffx_a.h
Shaders/AMDFidelityFX/SSSR/: ffx_sssr.h
Shaders/ScreenSpaceReflections/: ClassifyReflectionTiles.hlsl  Common.hlsl  Intersect.hlsl  Prefilter.hlsl  PrepareBlueNoiseTexture.hlsl  PrepareIndirectArgs.hlsl  Reproject.hlsl  ResolveTemporal.hlsl
Source/Application/: AmbientOcclusion.cpp  AmbientOcclusion.h  AssetLoader.cpp  AssetLoader.h  Camera.cpp  Camera.h  EnvironmentMap.cpp  Events.h  FileParser.cpp  GPUMarker.cpp  GPUMarker.h  GameObject.cpp  GameObject.h  Geometry.cpp  Geometry.h  HDR.h  Input.cpp  Input.h  Light.cpp  Light.h  Main.cpp  Material.cpp  Material.h  Math.h  Memory.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Platform.cpp  Platform.h  Quaternion.cpp  Quaternion.h  ResourceLoader.h  Scene.cpp  Scene.h  Settings.h  ThreadPool.cpp  ThreadPool.h  Transform.cpp  (+12 more)
Source/Engine/: AssetLoader.cpp  AssetLoader.h  Culling.cpp  Culling.h  CullingData.h  EnvironmentMap.cpp  EnvironmentMap.h  GPUMarker.cpp  GPUMarker.h  Geometry.h  LoadingScreen.cpp  LoadingScreen.h  Main.cpp  Math.cpp  Math.h  MeshSorting.h  Settings.h  VQEngine.h  VQEngine_Input.cpp  VQEngine_Main.cpp  VQEngine_Render.cpp  VQEngine_RenderCommands.cpp  VQEngine_RenderCommon.h  VQEngine_Simulation.cpp  VQEngine_Update.cpp  VQUI.cpp  VQUI.h
Source/Engine/Core/: Events.cpp  Events.h  FileParser.cpp  FileParser.h  IWindow.h  Input.cpp  (+11 more)
Source/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  CommandQueue.cpp  CommandQueue.h  Common.h  CubemapUtility.cpp  DescriptorManagement.cpp  DescriptorManagement.h  Device.cpp  Device.h  Fence.cpp  Fence.h  HDR.h  Renderer.cpp  Renderer.h  Renderer_PSOs.cpp  Renderer_PSOs.h  Renderer_Resources.cpp  Renderer_RootSignatures.cpp  ResourceHeaps.cpp  ResourceHeaps.h  ResourceViews.cpp  ResourceViews.h  Shader.cpp  Shader.h  ShaderCompileUtils.cpp  ShaderCompileUtils.h  SwapChain.cpp  SwapChain.h  Tessellation.h  Texture.cpp  Texture.h  WindowRenderContext.cpp  WindowRenderContext.h  stdafx.h
Source/Renderer/Core/: CommandQueue.cpp  CommandQueue.h  Common.h  Device.cpp  Device.h  Fence.cpp  Fence.h  SwapChain.cpp  SwapChain.h
Source/Renderer/Libs/AMD/CACAO/: ffx_cacao_bindings.hlsl  ffx_cacao_impl.cpp  ffx_cacao_impl.h
Source/Renderer/Libs/D3DX12/: .gitingore
Source/Renderer/Libs/DirectXCompiler/: README.md
Source/Renderer/Libs/FidelityFX/CACAO/: ffx_cacao.cpp  ffx_cacao.h  ffx_cacao_defines.h
Source/Renderer/Pipeline/: PipelineStateObjects.cpp  PipelineStateObjects.h  Renderer_PSOs.cpp  Renderer_PSOs.h  Renderer_RootSignatures.cpp  RootSignatures.cpp  Shader.cpp  Shader.h  ShaderCompileUtils.cpp  ShaderCompileUtils.h  Tessellation.h
Source/Renderer/Rendering/: Batching.cpp  DrawData.h  EnvironmentMapRendering.cpp  EnvironmentMapRendering.h  HDR.h  LoadingScreenRendering.cpp  RenderResources.cpp  RenderResources.h  SceneRendering.cpp  WindowRenderContext.cpp  WindowRenderContext.h
Source/Renderer/Rendering/PostProcess/: PostProcess.cpp  PostProcess.h  Upscaling.cpp  Upscaling.h
Source/Renderer/Rendering/RenderPass/: AmbientOcclusion.cpp  AmbientOcclusion.h  ApplyReflections.cpp  ApplyReflections.h  DepthMSAAResolve.cpp  DepthMSAAResolve.h  FSR3UpscalePass.cpp  FSR3UpscalePass.h  MagnifierPass.cpp  MagnifierPass.h  ObjectIDPass.cpp  ObjectIDPass.h  OutlinePass.cpp  OutlinePass.h  RenderPass.cpp  RenderPass.h  ScreenSpaceReflections.cpp  ScreenSpaceReflections.h
Source/Renderer/Resources/: Buffer.cpp  Buffer.h  CubemapUtility.cpp  CubemapUtility.h  DXGIUtils.cpp  DXGIUtils.h  Renderer_Resources.cpp  ResourceHeaps.cpp  ResourceHeaps.h  ResourceViews.cpp  ResourceViews.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
Source/Scenes/: DefaultScene.cpp  EnvironmentMapUnitTestScene.cpp  GeometryUnitTestScene.cpp  LightingTestScene.cpp  Scenes.h  Sponza.cpp  SponzaScene.cpp  StressTestScene.cpp  TerrainScene.cpp
Source/Shaders/: FullscreenTriangle.hlsl  Tonemapper.hlsl  hello-cube.hlsl
Tools/: LICENSE
(+61 files in other folders)
